add shared beans mechanism